--- a/app/src/main/res/layout/activity_launches_page.xml
+++ b/app/src/main/res/layout/activity_launches_page.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textView7"
         android:layout_width="196dp"
         android:layout_height="40dp"
-        android:text="Next Launch:"
+        android:text="Next Launch"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="32dp"
@@ -27,6 +27,7 @@
         android:id="@+id/imageView5"
         android:layout_width="178dp"
         android:layout_height="226dp"
+        android:layout_marginBottom="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.163"
@@ -39,10 +40,11 @@
         android:id="@+id/textView8"
         android:layout_width="164dp"
         android:layout_height="78dp"
-        android:text="Soyuz Launch: ROSCOSMOS Kazakhistan"
+        android:text="Soyuz Launch ROSCOSMOS Kazakhistan"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="20dp"
+        android:layout_marginBottom="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.939"
@@ -82,11 +84,13 @@
         android:id="@+id/recyclerView"
         android:layout_width="410dp"
         android:layout_height="258dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.775" />
+        app:layout_constraintVertical_bias="0.892" />
 
     <Button
         android:id="@+id/button3"
