--- a/app/src/main/res/layout/activity_launches_page.xml
+++ b/app/src/main/res/layout/activity_launches_page.xml
@@ -85,6 +85,7 @@
         android:layout_width="410dp"
         android:layout_height="258dp"
         android:layout_marginTop="10dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -93,7 +94,7 @@
         app:layout_constraintVertical_bias="0.892" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/refresh"
         android:layout_width="138dp"
         android:layout_height="48dp"
         android:text="Refresh"
