--- a/app/src/main/res/layout/header_layout.xml
+++ b/app/src/main/res/layout/header_layout.xml
@@ -2,32 +2,33 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="300dp"
     android:layout_marginTop="10dp"
     android:background="@drawable/border">
 
     <ImageView
         android:id="@+id/upcomingLaunchImage"
-        android:layout_width="178dp"
-        android:layout_height="226dp"
+        android:layout_width="180dp"
+        android:layout_height="264dp"
         android:layout_marginBottom="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.012"
+        app:layout_constraintHorizontal_bias="0.069"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_bias="0.935"
         app:srcCompat="@drawable/dragon" />
 
     <TextView
         android:id="@+id/upcomingLaunchName"
-        android:layout_width="164dp"
-        android:layout_height="78dp"
+        android:layout_width="183dp"
+        android:layout_height="97dp"
         android:layout_marginBottom="5dp"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.935"
@@ -35,30 +36,45 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.108" />
 
+
     <TextView
-        android:id="@+id/upcomingLaunchWindowStart"
-        android:layout_width="164dp"
-        android:layout_height="53dp"
+        android:id="@+id/upcomingLaunchCountdownLabel"
+        android:layout_width="186dp"
+        android:layout_height="65dp"
+        android:text=""
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.938"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/upcomingLaunchCountdown"
+        android:layout_width="186dp"
+        android:layout_height="56dp"
         android:layout_marginTop="24dp"
         android:textAlignment="center"
         android:textColor="@android:color/holo_red_dark"
-        android:textSize="20dp"
+        android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.935"
+        app:layout_constraintHorizontal_bias="0.938"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.551" />
+        app:layout_constraintVertical_bias="0.717" />
 
     <Button
         android:id="@+id/notifyButton"
-        android:layout_width="163dp"
-        android:layout_height="40dp"
+        android:layout_width="182dp"
+        android:layout_height="37dp"
         android:text="Notify Me"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.935"
+        app:layout_constraintHorizontal_bias="0.925"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.916" />
+        app:layout_constraintVertical_bias="0.973" />
 </androidx.constraintlayout.widget.ConstraintLayout>
