--- a/app/src/main/res/layout/header_layout.xml
+++ b/app/src/main/res/layout/header_layout.xml
@@ -21,26 +21,26 @@
         app:layout_constraintVertical_bias="0.935"
         app:srcCompat="@drawable/dragon" />
 
+
     <TextView
         android:id="@+id/upcomingLaunchName"
-        android:layout_width="183dp"
-        android:layout_height="97dp"
+        android:layout_width="199dp"
+        android:layout_height="87dp"
         android:layout_marginBottom="5dp"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.935"
+        app:layout_constraintHorizontal_bias="0.938"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.108" />
-
+        app:layout_constraintVertical_bias="0.173" />
 
     <TextView
         android:id="@+id/upcomingLaunchCountdownLabel"
-        android:layout_width="186dp"
-        android:layout_height="65dp"
+        android:layout_width="200dp"
+        android:layout_height="54dp"
         android:text=""
         android:textAlignment="center"
         android:textColor="@color/white"
@@ -68,13 +68,14 @@
 
     <Button
         android:id="@+id/notifyButton"
-        android:layout_width="182dp"
-        android:layout_height="37dp"
+        android:layout_width="183dp"
+        android:layout_height="52dp"
         android:text="Notify Me"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.925"
+        app:layout_constraintHorizontal_bias="0.934"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.973" />
+        app:layout_constraintVertical_bias="0.939" />
 </androidx.constraintlayout.widget.ConstraintLayout>
