fix layout for astronauts page

--- a/app/src/main/res/layout/activity_random_astronaut_generator.xml
+++ b/app/src/main/res/layout/activity_random_astronaut_generator.xml
@@ -6,123 +6,90 @@
     android:layout_height="match_parent"
     android:fillViewport="true">
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/space_background">
-
-    <TextView
-        android:id="@+id/randomAstronautGeneratorTextView"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Random Astronaut Generator"
-        android:textColor="@color/white"
-        android:textSize="28sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.05"/>
+        android:orientation="vertical"
+        android:background="@drawable/space_background"
+        android:padding="15dp">
 
-    <ImageView
-        android:id="@+id/astronautImage"
-        android:layout_width="215dp"
-        android:layout_height="262dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/randomAstronautGeneratorTextView"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/sample_astronaut" />
+        <TextView
+            android:id="@+id/randomAstronautGeneratorTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Random Astronaut Generator"
+            android:textColor="@color/white"
+            android:textSize="28sp"
+            android:textStyle="bold"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="16dp"
+            />
 
-    <Button
-        android:id="@+id/randomizeButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Generate Random Astronaut"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/astronautImage"
-        app:layout_constraintVertical_bias="0.857" />
+        <ImageView
+            android:id="@+id/astronautImage"
+            android:layout_width="215dp"
+            android:layout_height="262dp"
+            android:layout_marginTop="24dp"
+            android:layout_gravity="center_horizontal"
+            app:srcCompat="@drawable/sample_astronaut" />
 
-    <TextView
-        android:id="@+id/astronautName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Name"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/randomizeButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.257"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/astronautImage"
-        app:layout_constraintVertical_bias="0.0" />
+        <TextView
+            android:id="@+id/astronautName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Name"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:layout_marginTop="16dp"
+            android:paddingLeft="20dp"/>
 
-    <TextView
-        android:id="@+id/astronautAge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="1dp"
-        android:layout_marginBottom="1dp"
-        android:text="Age"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/randomizeButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.244"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/astronautName"
-        app:layout_constraintVertical_bias="0.134" />
+        <TextView
+            android:id="@+id/astronautAge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Age"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:layout_marginTop="8dp"
+            android:paddingLeft="20dp"/>
 
-    <TextView
-        android:id="@+id/astronautNationality"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Nationality"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/randomizeButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.292"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/astronautAge"
-        app:layout_constraintVertical_bias="0.148" />
+        <TextView
+            android:id="@+id/astronautNationality"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nationality"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:layout_marginTop="8dp"
+            android:paddingLeft="20dp"/>
 
-    <TextView
-        android:id="@+id/astronautFlightCount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="60dp"
-        android:text="Flight Count"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/randomizeButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.303"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/astronautNationality"
-        app:layout_constraintVertical_bias="0.428" />
+        <TextView
+            android:id="@+id/astronautFlightCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Flight Count"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:layout_marginTop="8dp"
+            android:paddingLeft="20dp"/>
 
-    <TextView
-        android:id="@+id/astronautBio"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="22dp"
-        android:text="Bio"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/randomizeButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.24"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/astronautFlightCount"
-        app:layout_constraintVertical_bias="0.0" />
+        <TextView
+            android:id="@+id/astronautBio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Bio"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:layout_marginTop="8dp"
+            android:paddingLeft="20dp"/>
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/randomizeButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Generate Random Astronaut"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="24dp"
+            />
+    </LinearLayout>
 </ScrollView>
