--- a/app/src/main/res/layout/activity_random_astronaut_generator.xml
+++ b/app/src/main/res/layout/activity_random_astronaut_generator.xml
@@ -91,5 +91,13 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="24dp"
             />
+        <Button
+            android:id="@+id/favoritesButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add to Favorites"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="24dp"
+            />
     </LinearLayout>
 </ScrollView>
