--- a/app/src/main/res/layout/activity_favorites.xml
+++ b/app/src/main/res/layout/activity_favorites.xml
@@ -21,6 +21,7 @@
         />
 
     <ListView
+        android:id="@+id/listViewFavs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
