--- a/app/src/main/res/layout/event_layout_2.xml
+++ b/app/src/main/res/layout/event_layout_2.xml
@@ -27,6 +27,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textViewResults"
         android:layout_margin="25dp"
+        android:layout_marginBottom="50dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:clipToPadding="false"
+        android:paddingBottom="100dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
