edits to text for favorites page

--- a/app/src/main/res/layout/activity_favorites.xml
+++ b/app/src/main/res/layout/activity_favorites.xml
@@ -22,9 +22,9 @@
 
     <ListView
         android:id="@+id/listViewFavs"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
+        android:textColor="@color/white" />
 
 
 </LinearLayout>
